syntax = "proto3";
package payment;

service PaymentService {
  // Server streaming: Client sends 1 request, Server keeps stream open for updates
  rpc WatchAddress(WatchRequest) returns (stream PaymentEvent);
}

message WatchRequest {
  string address = 1;
  string coin_type = 2; // Optional: restrict to USDC, SUI, etc.
}

message PaymentEvent {
  string tx_digest = 1;
  string amount = 2;
  string token = 3;
  int64 timestamp = 4;
}
